--- a/src/sections/Team/Team.module.scss
+++ b/src/sections/Team/Team.module.scss
@@ -49,8 +49,10 @@
     .teamContainer{
         .sliderImageContainer{
             img{
-                width: 255px !important;
-                height: 355px!important;
+                // width: 255px !important;
+                // height: 355px!important;
+                width: 220px !important;
+                height: 300px!important;
             }
         }
     }
