--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -38,7 +38,7 @@ $font-neue-Ultrabold: 'NeueMachina-Ultrabold';
 
 // Spacings
 $showreel-y-space: 35px;
-$section-xs-padding: 9vh;
+$section-xs-padding: 9.5vh;
 
 // Sizes
 $section-title-height: 238px;
